# symmat

./: CMakeLists.txt  proposal.org  readme.org  readme.txt
export/: proposal.tex
export/auto/: proposal.el
include/: SymMat.h  SymMat.tpp
src/: Main.cpp  SymMat.cpp
test/: eigen_test.cpp  symmat_test.cpp
